--- a/templates/email.html
+++ b/templates/email.html
@@ -5,19 +5,20 @@
     <title>Test Jinja and email template</title>
 </head>
 <body>
+{% for vpckey, vpcvalue in vpcs.iteritems() %}
 <center>
-    <h1>{{ title }}</h1> 
+    <h1>{{ vpckey }}</h1> 
 </center>
 <table>
-{% for dicdata in info %}
-	{% for key, value in dicdata.items() %}
 	<tr>
-		<td>{{ key }}</td>
-		<td>{{ value }}</td>
-	<tr>
+	{% for item in vpcvalue %}
+		{% for desc, value in item.iteritems() %}
+			<td>{{ desc }}</td>
+			<td>{{ value }}</td>
+		{% endfor %}
 	{% endfor %}
+	<tr>
 {% endfor %}
-
 </table>
 </body>
 </html>
